# face-detection-recognition

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/class/Exception/: Exception.cpp  Exception.hpp
src/class/Image/: Image.cpp  Image.hpp
src/class/Mat/: Mat.cpp  Mat.hpp
src/class/PGMReader/: PGMReader.cpp  PGMReader.hpp
src/class/Window/: Window.cpp  Window.hpp
